tests/good/syntax/034-seq-2.clap
val t : { U } = U at { U }
val s : { U } = t; t  

