tests/bad/syntax/036-seq-3-right.clap
val t : { U } = U at 
val s : { U } = t; (; t)

